# claude-anvil

./: .gitignore  CLAUDE.md  README.md  profiler  pyproject.toml
.claude-plugin/: marketplace.json
agents/: cross-referencer.md  research-synthesizer.md
bookwright/: CLAUDE.md  README.md
bookwright/.claude-plugin/: plugin.json
bookwright/agents/: cross-ref-auditor.md  iterator.md  math-auditor.md  notebook-author.md  quality-auditor.md  reviewer.md  rewriter.md  section-writer.md  source-reformulator.md  spec-auditor.md  writer.md
bookwright/commands/: check.md  design.md  draft.md  help.md  init.md  integrate.md  iterate.md  notebook.md  plan.md  review.md  revise.md
bookwright/hooks/: hooks.json
bookwright/tests/: test-check.sh  test-init.sh  test-macro-leak-hook.sh
crier/: .mcp.json  CLAUDE.md  README.md
crier/.claude-plugin/: plugin.json
crier/agents/: auditor.md  cross-poster.md
crier/commands/: chronicler.md  crier.md
crier/hooks/: hooks.json
deets/: CLAUDE.md  README.md
deets/.claude-plugin/: plugin.json
deets/commands/: deets.md
jot/: CLAUDE.md  README.md
jot/commands/: jot.md  (+1 more)
kdp/: .mcp.json  CLAUDE.md  README.md
locksmith/: CLAUDE.md  README.md
mf/: CLAUDE.md  README.md
papermill/: CLAUDE.md  README.md
pub-pipeline/: CLAUDE.md  README.md
repoindex/: CLAUDE.md  README.md
research-agent/: CLAUDE.md  README.md
tests/: test_analyze_parser.py  test_extract.py  test_openalex.py
vista/: .mcp.json  CLAUDE.md  README.md  cli.py  config.py  mcp_server.py  pyproject.toml
worldsmith/: .gitignore  CLAUDE.md  README.md
(+244 files in other folders)
