[project]
name = "vista"
version = "0.1.0"
description = "Mine 'future work' sections from highly-cited papers to surface research directions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" }
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pymupdf>=1.24",
    "bibtexparser>=1.4",
    "platformdirs>=4.2",
    "tenacity>=8.5",
    "pyyaml>=6.0",
    "mcp>=1.2",
]

[project.scripts]
vista = "vista.cli:app"
vista-mcp = "vista.mcp_server:main"

[project.optional-dependencies]
# Anthropic SDK is only needed for the unattended (cron) batch path.
# The MCP server does NOT need it; the conversation does the synthesis.
api = ["anthropic>=0.39"]
viz = ["datasette>=0.64"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vista"]

[tool.ruff]
line-length = 100
target-version = "py311"
